[project]
name = "lsnet"
description = ""
version = "1.0.7"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["einops>=0.8.1", "fvcore", "easydict", "matplotlib", "yacs", "scikit-image", "wandb", "torch>=2.4.1", "torchvision>=0.11.0", "timm>=1.0.20", "numpy>=1.19.0", "Pillow>=8.0.0", "scikit-learn>=1.0.0", "matplotlib>=3.3.0", "tqdm>=4.60.0", "triton-windows"]

[project.urls]
Repository = "https://github.com/spawner1145/comfyui-lsnet"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/spawner1145/comfyui-lsnet/wiki"
"Bug Tracker" = "https://github.com/spawner1145/comfyui-lsnet/issues"

[tool.comfy]
PublisherId = "spawner"
DisplayName = "comfyui-lsnet"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

